changed the refresh back to location.reload for security, updated css to not show border-top on file details if the form is hidden

--- a/upload-server/internal/ui/assets/upload.css
+++ b/upload-server/internal/ui/assets/upload.css
@@ -1,7 +1,10 @@
 .file-detail-container {
-  border-top: 1px solid var(--upload-border-color);
   margin: 0 auto;
   padding: 1.2rem;
+}
+
+main > div:first-child:not(.hidden) + .file-detail-container {
+  border-top: 1px solid var(--upload-border-color);
 }
 
 .uploader-container {
