UPLOAD-1695 Show upload status of file in info (#475)
* updated the /info/{uploadId} endpoint to add upload_status to the response
	* upload_status contains 
		* status [Initiated, In Progress, Complete]
		* chunk_received_at
* updated the upload page to display the file detail data from the /info/{uploadId} when the upload status is In Progress or Complete
* added checks to determine the host (client uploading the file) and the peer (client viewing the file status)
* added ability for host to resume an upload
* added ability for host to pause and resume an upload
* added logic for handling different upload statuses for hosts and peers
	* if the upload status is Initiated, the upload form is displayed
	* if the host begins uploading a file, the upload form is hidden, the progress bar is shown, and the file details are shown
	* if the host refreshes while uploading, a resume upload form is shown and the file details are shown
	* if the host resumes an upload, the resume upload form is hidden, the progress bar is shown, and the file details are shown
	* if the peer views the page while the upload status is In Progress, only the file details are shown
	* if the upload status is complete, only the file details are shown
* added styling to the file details
* various clean ups for the html, css, and javascript
* playwright tests and accessibility changes

---------

Co-authored-by: Nicole Zonnenberg <nzonnenberg@fearless.tech>
Co-authored-by: Alex de los Reyes <areyes@fearless.tech>

--- a/upload-server/internal/ui/components/navbar.html
+++ b/upload-server/internal/ui/components/navbar.html
@@ -1,10 +1,13 @@
 {{define "navbar"}}
-  <nav>
-    <a class="skip-main" href="#main" tabindex="0">Skip to main content</a>
-    <div role="navigation" id="nav" class="nav-container">
-      <a href="/">
-        <img src="/assets/dex_logo.svg" alt="DEX logo" /> Upload
-      </a>
-    </div>
-  </nav>
+<div>
+  <a class="skip-main" href="#main" tabindex="0">Skip to main content</a>
+  <div class="nav-container">
+    <nav role="navigation" id="nav">
+      <a href="/"> <img src="/assets/dex_logo.svg" alt="DEX logo" /> Upload </a>
+      {{if .ShouldShowActions}}
+        {{template "newuploadbtn" .NewUploadBtn}}
+      {{end}}
+    </nav>
+  </div>
+</div>
 {{end}}
