--- a/upload-server/internal/ui/manifest.tmpl
+++ b/upload-server/internal/ui/manifest.tmpl
@@ -14,7 +14,7 @@
       <h1>Please fill in the sender manifest form for your file</h1>
       <p> * indicates a required field </p>
       <div class="form-container">
-        <form method="POST" action="{{.FormActionUrl}}">
+        <form method="POST" action="/upload">
           {{range .MetadataFields}}
             <div class="input-container">
               <label for="{{.FieldName}}">
