--- a/upload-server/internal/ui/manifest.tmpl
+++ b/upload-server/internal/ui/manifest.tmpl
@@ -36,14 +36,10 @@
             </div>
           {{end}}
           <div class="hidden">
-            <label for="data_stream_id">Data Stream ID</label>
-            <input type="text" id="data_stream_id" name="data_stream_id" value="{{.DataStream}}" />
+            <input type="hidden" id="data_stream_id" name="data_stream_id" value="{{.DataStream}}" />
+            <input type="hidden" id="data_stream_route" name="data_stream_route" value="{{.DataStreamRoute}}" />
+            {{ .CsrfField }}
           </div>
-          <div class="hidden">
-            <label for="data_stream_route">Data Stream Route</label>
-            <input type="text" id="data_stream_route" name="data_stream_route" value="{{.DataStreamRoute}}" />
-          </div>
-          {{ .CsrfField }}
           <div class="submit-button">
             <button type="submit">Next</button>
           </div>
