--- a/upload-server/internal/ui/assets/upload.css
+++ b/upload-server/internal/ui/assets/upload.css
@@ -106,6 +106,7 @@ main > div:first-child:not(.hidden) + .file-detail-container {
   font-weight: 500;
   width: 100%;
   text-align: center;
+  overflow-wrap: break-word;
 }
 
 /* ----------------------- */
