auth token form input

--- a/upload-server/internal/ui/assets/index.css
+++ b/upload-server/internal/ui/assets/index.css
@@ -90,6 +90,10 @@ button {
   font-style: italic;
 }
 
+.warning {
+  color: var(--upload-failure)
+}
+
 /* -------------- */
 /* Navbar Styling */
 /* -------------- */
