Phdo 392/sams auth (#602)
* auth token form input

* WIP simple login flow

* extracted jwt validation

* protected route middleware redirection

* establishes simple user session

* creates upload but fails to resume upload

* allow preflight checks from browser clients

* security flags and embed token in js

* login page style

* user session for user session middleware

* cli tests for user session

* redirect query param

* logout button in navbar

* use cookie getter from go 1.22

* handle no cookie on logout

* sanitize redirect url

* remove debug print statements

* fix protected route slice size

* import cleanup

* remove unused get cookie function

* remove token from html

* long lived token validator

* cleanup

* undo playwright config change

* forward cookie instead of set header

* forward session cookie if it exists

---------

Co-authored-by: cfarmer-fearless <cfarmer@fearless.com>

--- a/upload-server/internal/ui/assets/index.css
+++ b/upload-server/internal/ui/assets/index.css
@@ -90,6 +90,10 @@ button {
   font-style: italic;
 }
 
+.warning {
+  color: var(--upload-failure)
+}
+
 /* -------------- */
 /* Navbar Styling */
 /* -------------- */
@@ -120,6 +124,11 @@ a:visited {
 
 .nav-container img {
   width: 7.5rem !important;
+}
+
+.nav-actions-container {
+  display: flex;
+  gap: 6px;
 }
 
 /* ------------------- */
